--- a/Final/貓咪介紹.html
+++ b/Final/貓咪介紹.html
@@ -97,7 +97,9 @@
             width: 50%;
             float: left;
             padding: 30px;
-            border: 5px solid rgb(149, 250, 149);
+            border: 10px solid rgb(149, 250, 149);
+            border-style: double;
+            cursor: help;
         }
         
         @media (max-width:768px) {
@@ -106,6 +108,8 @@
                 padding: 3px;
                 border: 2px solid rgb(97, 241, 169);
                 float: left;
+                border-style: dashed;
+                cursor: help;
             }
             body {
                 background: rgb(161, 176, 241);
@@ -119,6 +123,8 @@
                 border: 2px solid yellow;
                 margin-right: 0px;
                 float: left;
+                border-style: dashed;
+                cursor: help;
             }
             body {
                 background: rgb(240, 173, 173);
