--- a/Final/index.html
+++ b/Final/index.html
@@ -93,15 +93,17 @@
             width: 50%;
             float: left;
             padding: 30px;
-            border: 5px solid rgb(149, 250, 149);
+            border: 10px solid rgb(149, 250, 149);
+            border-style: double;
         }
         
         @media (max-width:768px) {
             img {
                 width: 50%;
-                padding: 3px;
+                padding: 5px;
                 border: 2px solid rgb(97, 241, 169);
                 float: left;
+                border-style: dashed;
             }
             body {
                 background: rgb(161, 176, 241);
@@ -111,10 +113,11 @@
         @media (max-width:569px) {
             img {
                 width: 50%;
-                padding: 5px;
+                padding: 3px;
                 border: 2px solid yellow;
                 margin-right: 0px;
                 float: left;
+                border-style: dashed;
             }
             body {
                 background: rgb(240, 173, 173);
